# lzws

./: .appveyor.yml  .cirrus.yml  .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .rubocop.yml  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  LICENSE  README.md  README.rst  clang-format.sh
.circleci/: config.yml
cmake/checks/: CheckC11.cmake  CheckC99.cmake  CheckGMP.cmake  CheckIPO.cmake  CheckLTO.cmake  CheckRunnable.cmake  GetCoverageFlags.cmake  GetPipeFlags.cmake  GetVerboseFlags.cmake
cmake/checks/C11/: CMakeLists.txt  main.c
cmake/checks/C99/: CMakeLists.txt  main.c
cmake/checks/GMP/: CMakeLists.txt  main.c
cmake/checks/basic/: CMakeLists.txt  main.c
cmake/finds/: FindAsciidoc.cmake  FindGMP.cmake
cmake/functions/: DefineRelativeFilePaths.cmake
cmake/generators/: GenerateBitMasksTable.cmake  GenerateBytesWithReversedBitsTable.cmake  GenerateMasksForLastBitsTable.cmake  GeneratePowersOfTwoTable.cmake  GenerateReverseBitsTable.cmake  toolchain.cmake
cmake/generators/bit_masks_table/: CMakeLists.txt  main.c
cmake/generators/bytes_with_reversed_bits_table/: CMakeLists.txt  main.c  print.h
cmake/generators/common/: print.h  print_data.h  toolchain.cmake
cmake/generators/masks_for_last_bits_table/: CMakeLists.txt  main.c  print.h
cmake/scripts/: test-all-toolchains.sh
cmake/toolchains/: default.cmake
doc/: compressor.txt  compressor_ratio.txt  compressor_with_linked_list.txt  compressor_with_sparse_array.txt  decompressor.txt  fast_compressor.txt  linked_list_compressor.txt  output_compatibility.txt  real_world_testing.txt  trie_on_sparse_array_compressor.txt
examples/: CMakeLists.txt
examples/file/: CMakeLists.txt
examples/generic/: CMakeLists.txt
examples/string/: CMakeLists.txt  main.c
man/: CMakeLists.txt  lzws.1.txt
man/file/: CMakeLists.txt  lzws_compress_file.3.txt  lzws_decompress_file.3.txt
man/generic/: CMakeLists.txt  lzws_compress.3.txt  lzws_compressor_finish.3.txt  lzws_compressor_free_state.3.txt  lzws_compressor_get_initial_state.3.txt  lzws_compressor_write_magic_header.3.txt  lzws_create_buffer_for_compressor.3.txt  lzws_create_buffer_for_decompressor.3.txt  lzws_create_destination_buffer_for_compressor.3.txt  lzws_create_destination_buffer_for_decompressor.3.txt  lzws_create_source_buffer_for_compressor.3.txt  lzws_create_source_buffer_for_decompressor.3.txt  lzws_decompress.3.txt  lzws_decompressor_free_state.3.txt  lzws_decompressor_get_initial_state.3.txt  lzws_decompressor_read_magic_header.3.txt  lzws_finish_compressor.3.txt  lzws_flush_compressor.3.txt  lzws_resize_buffer.3.txt
man/string/: CMakeLists.txt  lzws_compress_string.3.txt  lzws_decompress_string.3.txt
scripts/: add_remotes.sh  mount_tmp.sh  release.sh  tmp_ramfs.sh  toolchains.sh  update.sh
scripts/archive-collector/: .ruby-gemset  README.md
scripts/tar-z-collector/: .ruby-gemset  Gemfile  README.md  proxychains.conf  query.rb  update_url_list.rb  update_url_list.sh
scripts/test-images/: README.md  entrypoint.sh  env.sh  utils.sh
src/: CMakeLists.txt  buffer.c  buffer.h  cli.c  common.c  common.h  compressor.c  compressor.h  config.h.in  constants.c  constants.h  decompressor.c  decompressor.h  file.c  file.h  generated-constants.c.in  generated_constants.c  generated_constants.c.in  log.c  log.h  lzw.c  lzw.h  macro.h  main.c  string.c  string.h  utils.c  utils.h
src/cli/: CMakeLists.txt  main.c
src/compressor/: CMakeLists.txt  alignment.c  alignment.h  code.c  code.h  common.h  current_code.c  current_code.h  header.c  header.h  main.c  main.h  process_code.c  process_code.h  ratio.c  ratio.h  read_symbol.c  read_symbol.h  remainder.c  remainder.h  state.c  state.h  symbol.c  symbol.h  utils.c  utils.h  write.c  write.h  write_alignment.c  write_alignment.h  write_code.c  write_code.h  write_header.c  write_header.h  write_remainder.c  write_remainder.h
src/compressor/alignment/: CMakeLists.txt  common.h  main.c  main.h  wrapper.c  wrapper.h
src/compressor/dictionary/: CMakeLists.txt  common.h  main.h  state.c  state.h  type.h  wrapper.c  wrapper.h
src/compressor/dictionary/linked-list/: CMakeLists.txt  common.h  main.c  main.h  type.h  wrapper.c  wrapper.h
src/compressor/dictionary/sparse-array/: common.h  main.c  main.h  type.h  wrapper.c  wrapper.h
src/compressor/dictionary/trie-on-linked-list/: CMakeLists.txt  main.c  main.h  type.h
src/compressor/dictionary/trie-on-sparse-array/: CMakeLists.txt  main.c  main.h  type.h
src/compressor/ratio/: CMakeLists.txt  common.h  main.c  main.h  type.h  wrapper.c  wrapper.h
src/decompressor/: CMakeLists.txt  alignment.c  alignment.h  code.c  code.h  common.h  current_code.c  current_code.h  header.c  header.h  main.c  main.h  process_code.c  process_code.h  read_alignment.c  read_alignment.h  read_code.c  read_code.h  read_header.c  read_header.h  read_remainder.c  read_remainder.h  remainder.c  remainder.h  state.c  state.h  symbol.c  symbol.h  utils.c  utils.h  write.c  write.h  write_symbol.c  write_symbol.h
src/decompressor/alignment/: common.h  main.c  main.h  wrapper.c  wrapper.h
src/decompressor/dictionary/: CMakeLists.txt  common.h  main.c  main.h  type.h  wrapper.c  wrapper.h
src/examples/file/: CMakeLists.txt  main.c
src/examples/generic/: CMakeLists.txt  main.c
src/examples/string/: CMakeLists.txt  main.c
src/old/: compressor.c  compressor.h  decompressor.h  lzw.c  main.c
src/tests/: CMakeLists.txt  code.c  code.h  codes.c  codes.h  combination.c  combination.h  combinations.c  combinations.h  random_string.c  random_string.h  string_and_file.c  string_and_file.h
src/tests/basic/: CMakeLists.txt  codes.c  codes.h
src/tests/file/: CMakeLists.txt  invalid.c  invalid.h  main.c
src/tests/invalid/: CMakeLists.txt  code.c  code.h  codes.c  codes.h  data.c  data.h  header.c  header.h  main.c  max_code_bit_length.c  max_code_bit_length.h  source.c  source.h
src/tests/string/: CMakeLists.txt  invalid.c  invalid.h  main.c
src/tests/valid/: CMakeLists.txt  code.c  code.h  codes.c  codes.h  data.c  data.h  main.c
(+141 files in other folders)
